load("@rules_conda//conda/environment:defs.bzl", "run_binary")

run_binary(
    name = "0.28",
    environment = "@pkg_config_0.28",
    path = select({
        "@platforms//os:windows": "Library/bin/pkg-config",
        "//conditions:default": "bin/pkg-config",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.29",
    environment = "@pkg_config_0.29",
    path = select({
        "@platforms//os:windows": "Library/bin/pkg-config",
        "//conditions:default": "bin/pkg-config",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "pkg-config",
    actual = ":0.29",
    visibility = ["//visibility:public"],
)
