load("@rules_conda//conda/environment:defs.bzl", "run_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_binary(
    name = "0.28",
    environment = "@pkg_config_0.28",
    executable = select({
        "@platforms//os:windows": "pkg-config.exe",
        "//conditions:default": "pkg-config.bin",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.29",
    environment = "@pkg_config_0.29",
    executable = select({
        "@platforms//os:windows": "pkg-config.exe",
        "//conditions:default": "pkg-config.bin",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "pkg-config",
    actual = ":0.29",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "pkg-config_smoke_test",
    srcs = ["//private:tool_smoke_test.sh"],
    args = ["$(location :0.29)"],
    data = [":0.29"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//:platform_windows_x86_64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
