load("@rules_conda//conda/environment:defs.bzl", "run_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_binary(
    name = "1.0",
    environment = "@binutils_1.0",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.26",
    environment = "@binutils_2.26",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.27",
    environment = "@binutils_2.27",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.28",
    environment = "@binutils_2.28",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.30",
    environment = "@binutils_2.30",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.31",
    environment = "@binutils_2.31",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.32",
    environment = "@binutils_2.32",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.33",
    environment = "@binutils_2.33",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.34",
    environment = "@binutils_2.34",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.35",
    environment = "@binutils_2.35",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.36",
    environment = "@binutils_2.36",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.39",
    environment = "@binutils_2.39",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.40",
    environment = "@binutils_2.40",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.42",
    environment = "@binutils_2.42",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.43",
    environment = "@binutils_2.43",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.44",
    environment = "@binutils_2.44",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.45",
    environment = "@binutils_2.45",
    executable = select({
        "@platforms//os:windows": "readelf.exe",
        "//conditions:default": "readelf",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "readelf",
    actual = ":2.45",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "readelf_smoke_test",
    srcs = ["//private:tool_smoke_test.sh"],
    args = ["$(location :2.45)"],
    data = [":2.45"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//:platform_windows_x86_64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
