load("@rules_conda//conda/environment:defs.bzl", "run_binary")

run_binary(
    name = "0.0",
    environment = "@ruff_0.0",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.1",
    environment = "@ruff_0.1",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.2",
    environment = "@ruff_0.2",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.3",
    environment = "@ruff_0.3",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.4",
    environment = "@ruff_0.4",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.5",
    environment = "@ruff_0.5",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.6",
    environment = "@ruff_0.6",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.7",
    environment = "@ruff_0.7",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.8",
    environment = "@ruff_0.8",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.9",
    environment = "@ruff_0.9",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.10",
    environment = "@ruff_0.10",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.11",
    environment = "@ruff_0.11",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.12",
    environment = "@ruff_0.12",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.13",
    environment = "@ruff_0.13",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.14",
    environment = "@ruff_0.14",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "ruff",
    actual = ":0.14",
    visibility = ["//visibility:public"],
)
