load("@rules_conda//conda/environment:defs.bzl", "run_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_binary(
    name = "0.0",
    environment = "@ruff_0.0",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.1",
    environment = "@ruff_0.1",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.2",
    environment = "@ruff_0.2",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.3",
    environment = "@ruff_0.3",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.4",
    environment = "@ruff_0.4",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.5",
    environment = "@ruff_0.5",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.6",
    environment = "@ruff_0.6",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.7",
    environment = "@ruff_0.7",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.8",
    environment = "@ruff_0.8",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.9",
    environment = "@ruff_0.9",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.10",
    environment = "@ruff_0.10",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.11",
    environment = "@ruff_0.11",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.12",
    environment = "@ruff_0.12",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.13",
    environment = "@ruff_0.13",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.14",
    environment = "@ruff_0.14",
    path = select({
        "@platforms//os:windows": "Library/bin/ruff.exe",
        "//conditions:default": "bin/ruff",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "ruff",
    actual = ":0.14",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "help_test",
    srcs = ["//:run_tool_help_test.sh"],
    args = ["$(location :0.14)"],
    data = [":0.14"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//:platform_windows_x86_64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
