load("@rules_conda//conda/environment:defs.bzl", "run_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_binary(
    name = "2.4",
    environment = "@yq_2.4",
    path = select({
        "@platforms//os:windows": "Library/bin/yq.exe",
        "//conditions:default": "bin/yq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.5",
    environment = "@yq_2.5",
    path = select({
        "@platforms//os:windows": "Library/bin/yq.exe",
        "//conditions:default": "bin/yq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.6",
    environment = "@yq_2.6",
    path = select({
        "@platforms//os:windows": "Library/bin/yq.exe",
        "//conditions:default": "bin/yq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.7",
    environment = "@yq_2.7",
    path = select({
        "@platforms//os:windows": "Library/bin/yq.exe",
        "//conditions:default": "bin/yq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.10",
    environment = "@yq_2.10",
    path = select({
        "@platforms//os:windows": "Library/bin/yq.exe",
        "//conditions:default": "bin/yq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.11",
    environment = "@yq_2.11",
    path = select({
        "@platforms//os:windows": "Library/bin/yq.exe",
        "//conditions:default": "bin/yq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.12",
    environment = "@yq_2.12",
    path = select({
        "@platforms//os:windows": "Library/bin/yq.exe",
        "//conditions:default": "bin/yq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.13",
    environment = "@yq_2.13",
    path = select({
        "@platforms//os:windows": "Library/bin/yq.exe",
        "//conditions:default": "bin/yq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.14",
    environment = "@yq_2.14",
    path = select({
        "@platforms//os:windows": "Library/bin/yq.exe",
        "//conditions:default": "bin/yq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.1",
    environment = "@yq_3.1",
    path = select({
        "@platforms//os:windows": "Library/bin/yq.exe",
        "//conditions:default": "bin/yq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.2",
    environment = "@yq_3.2",
    path = select({
        "@platforms//os:windows": "Library/bin/yq.exe",
        "//conditions:default": "bin/yq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.3",
    environment = "@yq_3.3",
    path = select({
        "@platforms//os:windows": "Library/bin/yq.exe",
        "//conditions:default": "bin/yq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.4",
    environment = "@yq_3.4",
    path = select({
        "@platforms//os:windows": "Library/bin/yq.exe",
        "//conditions:default": "bin/yq",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "yq",
    actual = ":3.4",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "help_test",
    srcs = ["//:run_tool_help_test.sh"],
    args = ["$(location :3.4)"],
    data = [":3.4"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
